--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: blog
-title: Home
+title: 지옥훈런
 description: >
-  The official Hydejack blog. Version updates, example content and how-to guides on how to blog with Jekyll.
-  Open `index.html` to edit this text.
+  지옥훈런 공식 웹사이트입니다.
 cover: true
 ---
